--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "steam",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/Steam.ts",
+  "main": "./dist/Steam.js",
   "scripts": {
     "dev": "vitest",
     "test": "vitest run",
